[package]
name = "omar_os"
version = "0.1.0"
edition = "2024"

[dependencies]
bootloader = { version = "0.9", features = ["map_physical_memory"] }

[dependencies.lazy_static]
version = "1.0"
features = ["spin_no_std"]


[[bin]]
name = "blog_os"
test = true
bench = false
path = "src/main.rs"

[package.metadata.bootimage]
test-args = [
    "-device",
    "isa-debug-exit,iobase=0xf4,iosize=0x04",
    "-serial",
    "stdio",
    "-display",
    "none",
]
test-success-exit-code = 33 # (0x10 << 1) | 1
